--- a/index.html
+++ b/index.html
@@ -3,58 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>toye不定期 | 公式サイト</title>
+  <title>toye不定期 | YouTube公式サイト</title>
 
-  <!-- SEO用 -->
-  <meta name="description" content="YouTubeチャンネル toye不定期 の公式サイトです。最新情報・企画リストを掲載しています。">
+  <!-- SEO -->
+  <meta name="description" content="YouTubeチャンネル『toye不定期』の公式サイトです。不定期に企画・解説・バラエティ動画を配信中。Discord Botのソースコード提供や最新情報も掲載中。">
   <meta name="robots" content="index, follow">
 
-  <!-- OGP設定 -->
+  <!-- OGP -->
   <meta property="og:title" content="toye不定期 | 公式サイト">
-  <meta property="og:description" content="YouTubeチャンネル toye不定期 の最新情報・企画リストを公開しています。">
+  <meta property="og:description" content="YouTubeチャンネル『toye不定期』の最新情報を掲載。Discord Botサポートや企画リストはこちら。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://toye.f5.si/">
   <meta property="og:image" content="https://toye.f5.si/og-image.png">
 
   <style>
-    body { font-family:"Noto Sans JP",sans-serif; background:#f4f6f9; margin:0; padding:0; color:#333; }
-    header { background:#2c3e50; color:#fff; padding:20px; text-align:center; }
-    header h1 { margin:0; font-size:1.8em; }
-    header p { margin:5px 0 0; font-size:1em; }
-    main { max-width:800px; margin:40px auto; background:#fff; padding:30px; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
-    h2 { color:#c0392b; font-size:1.4em; margin-bottom:15px; }
-    .section { margin-bottom:30px; }
-    .btn { display:inline-block; padding:10px 20px; background:#e74c3c; color:#fff; text-decoration:none; border-radius:6px; }
+    body { font-family:"Noto Sans JP", sans-serif; margin:0; background:#f8f9fa; color:#333; }
+    header { background:#2c3e50; color:#fff; padding:25px; text-align:center; }
+    header h1 { margin:0; font-size:2em; }
+    header p { margin:8px 0 0; font-size:1em; }
+    main { max-width:900px; margin:40px auto; padding:30px; background:#fff; border-radius:12px; box-shadow:0 4px 14px rgba(0,0,0,0.1); }
+    h2 { color:#c0392b; border-left:6px solid #c0392b; padding-left:10px; margin-bottom:15px; }
+    p { line-height:1.8; margin-bottom:20px; }
+    .btn { display:inline-block; padding:12px 22px; background:#e74c3c; color:#fff; border-radius:6px; text-decoration:none; }
     .btn:hover { background:#c0392b; }
-    footer { text-align:center; padding:20px; font-size:0.9em; color:#777; }
+    .video-frame { margin:20px 0; text-align:center; }
+    iframe { width:100%; max-width:560px; height:315px; border:none; border-radius:10px; }
+    footer { text-align:center; margin:30px 0; font-size:0.9em; color:#666; }
   </style>
 </head>
 <body>
   <header>
     <h1>🎥 toye不定期</h1>
-    <p>YouTubeチャンネル公式サイト</p>
+    <p>YouTube公式サイト</p>
   </header>
 
   <main>
-    <div class="section">
-      <h2>📢 最新のお知らせ</h2>
-      <p>現在準備中です。新しい企画や情報が入り次第こちらに掲載します。</p>
-    </div>
+    <section>
+      <h2>📢 toye不定期とは？</h2>
+      <p>
+        「toye不定期」は、YouTubeで活動している公式チャンネルです。<br>
+        不定期更新ながら、バラエティ企画・解説動画・実験的なコンテンツなど幅広いジャンルをお届けしています。<br>
+        この公式サイトでは、YouTubeチャンネルの最新情報や企画採用リスト、さらに視聴者の皆さまへの公式発表を順次掲載していきます。<br>
+        現在は準備中の部分も多いですが、今後は「ブレインロット企画」や「フォートナイト関連情報」などのコンテンツも追加予定です。<br>
+        ぜひブックマークしてチェックしてください！
+      </p>
+    </section>
 
-    <div class="section">
-      <h2>▶ チャンネルはこちら</h2>
-      <p>YouTubeチャンネルで動画を公開中！ぜひチェックしてください。</p>
-      <a href="https://www.youtube.com/@toye%E4%B8%8D%E5%AE%9A%E6%9C%9F" class="btn" target="_blank">toye不定期 チャンネルへ</a>
-    </div>
+    <section>
+      <h2>▶ 最新動画</h2>
+      <div class="video-frame">
+        <!-- 任意の動画IDに置き換え -->
+        <iframe src="https://www.youtube.com/embed/buPIEcgNSqo" allowfullscreen></iframe>
+      </div>
+      <p style="text-align:center;">
+        <a href="https://www.youtube.com/@toye%E4%B8%8D%E5%AE%9A%E6%9C%9F" target="_blank" class="btn">チャンネルをチェック</a>
+      </p>
+    </section>
 
-    <div class="section">
+    <section>
+      <h2>🤖 Discord Bot ソースコード提供について</h2>
+      <p>
+        「toye不定期」では、Discord Bot のソースコードについてわからない方へ向けて、<br>
+        YouTubeチャンネル登録者限定で解説・コード提供を行っています。<br><br>
+        興味のある方は、ぜひチャンネル登録のうえ、<b>フリーチャット</b>にてお気軽にコメントしてください。<br>
+        コメントを確認次第、サポートや詳細情報をお届けします。<br><br>
+        初心者の方も大歓迎ですので、お気軽にご参加ください！
+      </p>
+    </section>
+
+    <section>
       <h2>📝 企画採用リスト</h2>
-      <p>現時点ではまだありません。</p>
-    </div>
+      <p>現在はまだ採用された企画はありません。決定次第こちらで公開いたします。</p>
+    </section>
+
+    <section>
+      <h2>📬 お問い合わせ</h2>
+      <p>
+        公式情報に関するお問い合わせは、YouTubeチャンネルのコメント欄または公式フォームにてお願いします。<br>
+        将来的には、このサイトからも直接お問い合わせいただけるフォームを設置予定です。
+      </p>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 toye不定期 公式サイト</p>
+    <p>&copy; 2025 toye不定期 | 公式サイト</p>
   </footer>
 </body>
 </html>
