--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>toye不定期 | YouTube公式サイト</title>
 
-  <!-- SEO -->
-  <meta name="description" content="YouTubeチャンネル『toye不定期』の公式サイトです。不定期に企画・解説・バラエティ動画を配信中。Discord Botのソースコード提供や最新情報も掲載中。">
+  <meta name="description" content="YouTubeチャンネル『toye不定期』の公式サイトです。ショート動画・企画情報・Discord Bot サポートなど最新情報を掲載中。">
   <meta name="robots" content="index, follow">
 
-  <!-- OGP -->
   <meta property="og:title" content="toye不定期 | 公式サイト">
   <meta property="og:description" content="YouTubeチャンネル『toye不定期』の最新情報を掲載。Discord Botサポートや企画リストはこちら。">
   <meta property="og:type" content="website">
@@ -39,49 +37,38 @@
 
   <main>
     <section>
-      <h2>📢 toye不定期とは？</h2>
+      <h2>📢 チャンネルについて</h2>
       <p>
         「toye不定期」は、YouTubeで活動している公式チャンネルです。<br>
-        不定期更新ながら、バラエティ企画・解説動画・実験的なコンテンツなど幅広いジャンルをお届けしています。<br>
-        この公式サイトでは、YouTubeチャンネルの最新情報や企画採用リスト、さらに視聴者の皆さまへの公式発表を順次掲載していきます。<br>
-        現在は準備中の部分も多いですが、今後は「ブレインロット企画」や「フォートナイト関連情報」などのコンテンツも追加予定です。<br>
-        ぜひブックマークしてチェックしてください！
+        不定期に企画動画・解説・実験的なコンテンツなどを発信しています。<br>
+        この公式サイトでは、YouTubeチャンネルの最新情報やショート動画、企画採用リスト、さらにDiscord Botサポートについてご案内しています。<br>
+        現在は準備中の部分も多いですが、今後は「ブレインロット企画」や「フォートナイト関連情報」なども追加予定です。
       </p>
     </section>
 
     <section>
-      <h2>▶ 最新動画</h2>
+      <h2>🎬 最新ショート動画</h2>
       <div class="video-frame">
-        <!-- 任意の動画IDに置き換え -->
-        <iframe src="https://www.youtube.com/embed/buPIEcgNSqo" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/bCK8TLoOOjI" allowfullscreen></iframe>
       </div>
       <p style="text-align:center;">
-        <a href="https://www.youtube.com/@toye%E4%B8%8D%E5%AE%9A%E6%9C%9F" target="_blank" class="btn">チャンネルをチェック</a>
+        <a href="https://youtube.com/shorts/bCK8TLoOOjI?si=Gl2R4pVCziinuEFo" target="_blank" class="btn">YouTubeで見る</a>
       </p>
     </section>
 
     <section>
-      <h2>🤖 Discord Bot ソースコード提供について</h2>
+      <h2>🤖 Discord Bot ソースコード提供</h2>
       <p>
-        「toye不定期」では、Discord Bot のソースコードについてわからない方へ向けて、<br>
+        Discord Bot のソースコードについてわからない方へ向けて、<br>
         YouTubeチャンネル登録者限定で解説・コード提供を行っています。<br><br>
-        興味のある方は、ぜひチャンネル登録のうえ、<b>フリーチャット</b>にてお気軽にコメントしてください。<br>
-        コメントを確認次第、サポートや詳細情報をお届けします。<br><br>
-        初心者の方も大歓迎ですので、お気軽にご参加ください！
+        興味のある方は、ぜひチャンネル登録のうえ、<b>フリーチャット</b>にてコメントしてください。<br>
+        コメントを確認次第、詳細をお伝えします。初心者の方も大歓迎です！
       </p>
     </section>
 
     <section>
       <h2>📝 企画採用リスト</h2>
       <p>現在はまだ採用された企画はありません。決定次第こちらで公開いたします。</p>
-    </section>
-
-    <section>
-      <h2>📬 お問い合わせ</h2>
-      <p>
-        公式情報に関するお問い合わせは、YouTubeチャンネルのコメント欄または公式フォームにてお願いします。<br>
-        将来的には、このサイトからも直接お問い合わせいただけるフォームを設置予定です。
-      </p>
     </section>
   </main>
 
