--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>toye不定期 | YouTube公式サイト</title>
+  <title>toye不定期公式サイト | ブレインロット・フォートナイト企画・Discord Bot情報</title>
 
-  <meta name="description" content="YouTubeチャンネル『toye不定期』の公式サイトです。ショート動画・企画情報・Discord Bot サポートなど最新情報を掲載中。">
+  <meta name="description" content="YouTubeチャンネル『toye不定期』の公式サイト。最新ショート動画、ブレインロット企画、フォートナイト情報、Discord Bot解説など新しい視聴者に役立つ情報を発信しています。">
   <meta name="robots" content="index, follow">
 
-  <meta property="og:title" content="toye不定期 | 公式サイト">
-  <meta property="og:description" content="YouTubeチャンネル『toye不定期』の最新情報を掲載。Discord Botサポートや企画リストはこちら。">
+  <meta property="og:title" content="toye不定期公式サイト">
+  <meta property="og:description" content="YouTubeチャンネル『toye不定期』の最新動画やブレインロット情報、Discord Botサポートをお届けします。">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://toye.f5.si/">
-  <meta property="og:image" content="https://toye.f5.si/og-image.png">
+  <meta property="og:url" content="https://adsteamnoeno1.br1.f5.si/">
+  <meta property="og:image" content="https://adsteamnoeno1.br1.f5.si/og-image.png">
 
   <style>
     body { font-family:"Noto Sans JP", sans-serif; margin:0; background:#f8f9fa; color:#333; }
@@ -59,7 +59,7 @@
 
   <header>
     <h1>🎥 toye不定期</h1>
-    <p>YouTube公式サイト</p>
+    <p>YouTube公式サイト | 最新動画・ブレインロット・フォートナイト情報</p>
   </header>
 
   <main>
@@ -67,9 +67,9 @@
       <h2>📢 チャンネルについて</h2>
       <p>
         「toye不定期」は、YouTubeで活動している公式チャンネルです。<br>
-        不定期に企画動画・解説・実験的なコンテンツなどを発信しています。<br>
-        この公式サイトでは、YouTubeチャンネルの最新情報やショート動画、企画採用リスト、さらにDiscord Botサポートについてご案内しています。<br>
-        現在は準備中の部分も多いですが、今後は「ブレインロット企画」や「フォートナイト関連情報」なども追加予定です。
+        不定期に企画動画・解説・実験的なコンテンツを発信しています。<br>
+        このサイトでは <b>最新ショート動画</b> や <b>ブレインロット情報</b>、<b>フォートナイト企画</b>、<b>Discord Bot解説</b> をまとめています。<br>
+        新しい視聴者の方にも役立つ情報を随時更新中です。
       </p>
     </section>
 
@@ -86,10 +86,10 @@
     <section>
       <h2>🤖 Discord Bot ソースコード提供</h2>
       <p>
-        Discord Bot のソースコードについてわからない方へ向けて、<br>
-        YouTubeチャンネル登録者限定で解説・コード提供を行っています。<br><br>
-        興味のある方は、ぜひチャンネル登録のうえ、<b>フリーチャット</b>にてコメントしてください。<br>
-        コメントを確認次第、詳細をお伝えします。初心者の方も大歓迎です！
+        Discord Bot のソースコードに関するサポートを、<br>
+        YouTubeチャンネル登録者限定で行っています。<br><br>
+        興味のある方は、ぜひチャンネル登録のうえ <b>フリーチャット</b> にてコメントをお願いします。<br>
+        初心者の方でもわかりやすく解説いたします。
       </p>
     </section>
 
