--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>名鉄 運行シミュレーター</title>
+  <style>
+    body {
+      font-family: "Yu Gothic UI", sans-serif;
+      background: #f5f5f5;
+      text-align: center;
+      padding: 20px;
+    }
+    #board {
+      background: #222;
+      color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      width: 80%;
+      margin: auto;
+      font-size: 1.4rem;
+    }
+    .btn {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 1.2rem;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      background: #c00;
+      color: #fff;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>名鉄運行情報・行先シミュレーター</h1>
+
+  <div id="board">
+    <p id="origin">始発: -</p>
+    <p id="dest">行先: -</p>
+    <p id="type">種別: -</p>
+    <p id="stations">停車駅: -</p>
+    <p id="announce">アナウンス: -</p>
+  </div>
+
+  <button class="btn" onclick="generateTrain()">列車を生成</button>
+
+  <!-- 駅データ(JSONを直接埋め込み) -->
+  <script>
+    const stations = [
+      "豊橋","伊奈","小田渕","国府","御油","名電赤坂","名電長沢","本宿","名電山中","藤川",
+      "美合","男川","東岡崎","岡崎公園前","矢作橋","宇頭","新安城","牛田","知立",
+      "一ツ木","富士松","豊明","前後","中京競馬場前","有松","左京山","鳴海","本星崎","本笠寺",
+      "桜","呼続","堀田","神宮前","金山","山王","名鉄名古屋","栄生","東枇杷島","西枇杷島",
+      "二ツ杁","新川橋","須ヶ口","丸ノ内","新清洲","大里","奥田","国府宮","島氏永","妙興寺",
+      "名鉄一宮","石刀","今伊勢","西一宮","開明","奥町","玉ノ井",
+      // …ここにさらに全駅を追加していけます
+      "名鉄岐阜"
+    ];
+  </script>
+
+  <script>
+    const types = ["普通", "準急", "急行", "特急"];
+
+    function generateTrain() {
+      if (stations.length === 0) {
+        alert("駅データがありません。");
+        return;
+      }
+
+      // 始発と行先をランダムに
+      const origin = stations[Math.floor(Math.random() * stations.length)];
+      let dest;
+      do {
+        dest = stations[Math.floor(Math.random() * stations.length)];
+      } while (dest === origin);
+
+      const type = types[Math.floor(Math.random() * types.length)];
+
+      // 停車駅（今は簡易で始発と終点だけ）
+      const stops = [origin, "…", dest];
+
+      // 画面表示
+      document.getElementById("origin").textContent = "始発: " + origin;
+      document.getElementById("dest").textContent = "行先: " + dest;
+      document.getElementById("type").textContent = "種別: " + type;
+      document.getElementById("stations").textContent = "停車駅: " + stops.join(" → ");
+
+      // アナウンス文
+      const announce = `この電車は、${origin}始発、${type} ${dest}行きです。`;
+      document.getElementById("announce").textContent = announce;
+
+      // Google翻訳TTSで読み上げ
+      playAnnouncement(announce);
+    }
+
+    function playAnnouncement(text) {
+      const url = "https://translate.google.com/translate_tts?ie=UTF-8&tl=ja&client=tw-ob&q=" 
+        + encodeURIComponent(text);
+      const audio = new Audio(url);
+      audio.play();
+    }
+  </script>
+
+</body>
+</html>
 
