--- a/index.html
+++ b/index.html
@@ -2,166 +2,133 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>名鉄 LED 行先シミュレーター</title>
+  <title>名鉄 運行シミュレーション</title>
   <style>
-    body {
-      background: #000;
-      font-family: monospace;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: #fff;
-    }
-
-    #led {
-      background: #111;
-      color: #fff;
-      font-size: 2.5rem;
-      width: 900px;
-      border: 4px solid #333;
-      border-radius: 10px;
-      box-shadow: 0 0 15px #0f0;
+    body { background: black; color: white; font-family: monospace; }
+    h1, h2 { text-align: center; }
+    .board { width: 700px; margin: auto; background: #333; padding: 10px; }
+    .train { display: flex; justify-content: space-between; padding: 5px; border-bottom: 1px solid gray; }
+    .departed { opacity: 0.4; text-decoration: line-through; }
+    .led { 
+      background: black; 
+      color: lime; 
+      font-size: 2em; 
+      white-space: nowrap; 
+      overflow: hidden; 
+      border: 2px solid #444;
+      padding: 5px;
+      margin: 20px auto;
+      width: 90%;
       text-align: center;
-      padding: 10px;
-    }
-
-    /* 上段（固定：種別と行き先） */
-    #fixedLine {
-      font-size: 3rem;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    /* 下段（スクロール案内） */
-    #scrollArea {
-      position: relative;
-      width: 100%;
-      height: 60px;
-      overflow: hidden;
-      background: #111;
-    }
-
-    #scrollText {
-      position: absolute;
-      white-space: nowrap;
-      animation: scroll-left 25s linear infinite;
-      font-size: 1.8rem;
-    }
-
-    @keyframes scroll-left {
-      0%   { left: 100%; }
-      100% { left: -100%; }
-    }
-
-    .btn {
-      margin: 20px;
-      padding: 10px 20px;
-      font-size: 1.2rem;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      background: #c00;
-      color: #fff;
     }
   </style>
 </head>
 <body>
+  <h1>発車案内</h1>
+  <div id="board" class="board"></div>
 
-  <div id="led">
-    <div id="fixedLine">普通 名鉄岐阜</div>
-    <div id="scrollArea">
-      <div id="scrollText">準備中...</div>
-    </div>
-  </div>
+  <h2>車内案内表示</h2>
+  <div id="led" class="led">準備中...</div>
 
-  <button class="btn" onclick="generateTrain()">列車を生成</button>
+<script>
+// 運行スケジュール（例）
+const trains = [
+  { time: "9:20", type: "普通", dest: "新安城", stops: ["名鉄名古屋","金山","神宮前","新安城"], transfer: "神宮前で常滑線にお乗換え" },
+  { time: "9:30", type: "急行", dest: "犬山", stops: ["名鉄名古屋","栄生","名鉄岐阜","犬山"], transfer: "名鉄岐阜で各務原線にお乗換え" },
+  { time: "9:40", type: "特急", dest: "豊橋", stops: ["名鉄名古屋","金山","知立","東岡崎","豊橋"], transfer: "知立で三河線にお乗換え" }
+];
 
-  <script>
-    // 駅リスト（名鉄本線の一部）
-    const stations = [
-      "豊橋","伊奈","小田渕","国府","御油","名電赤坂","名電長沢","本宿","名電山中","藤川",
-      "美合","男川","東岡崎","岡崎公園前","矢作橋","宇頭","新安城","牛田","知立",
-      "一ツ木","富士松","豊明","前後","中京競馬場前","有松","左京山","鳴海","本星崎","本笠寺",
-      "桜","呼続","堀田","神宮前","金山","山王","名鉄名古屋","栄生","東枇杷島","西枇杷島",
-      "二ツ杁","新川橋","須ヶ口","丸ノ内","新清洲","大里","奥田","国府宮","島氏永","妙興寺",
-      "名鉄一宮","石刀","今伊勢","西一宮","開明","奥町","玉ノ井","名鉄岐阜"
-    ];
+let currentTrainIndex = 0;
 
-    // 接続路線設定（架空＋実在混合）
-    const transfers = {
-      "新安城": "西尾線 吉良吉田方面",
-      "知立": "三河線 猿投方面",
-      "神宮前": "常滑線・河和線方面",
-      "金山": "JR中央本線・地下鉄名城線",
-      "名鉄名古屋": "近鉄名古屋線・地下鉄東山線"
-    };
+// 発車案内更新
+function updateBoard() {
+  const board = document.getElementById("board");
+  board.innerHTML = "";
+  trains.forEach((t, i) => {
+    const div = document.createElement("div");
+    div.className = "train" + (i < currentTrainIndex ? " departed" : "");
+    div.innerHTML = `<span>${t.type}</span><span>${t.time}</span><span>${t.dest}行き</span>`;
+    board.appendChild(div);
+  });
+}
 
-    const types = ["普通", "準急", "急行", "特急"];
+// ランダムに人身事故 (0.01%)
+function randomAccident() {
+  return Math.random() < 0.0001;
+}
 
-    function generateTrain() {
-      const originIndex = Math.floor(Math.random() * stations.length);
-      const origin = stations[originIndex];
+// ランダムに通過待ち (10%)
+function randomPassing() {
+  return Math.random() < 0.1;
+}
 
-      let destIndex;
-      do {
-        destIndex = Math.floor(Math.random() * stations.length);
-      } while (destIndex === originIndex);
+// ランダムに隣電車待ち (5%)
+function randomWait() {
+  return Math.random() < 0.05;
+}
 
-      const [start, end] = originIndex < destIndex
-        ? [originIndex, destIndex]
-        : [destIndex, originIndex];
+// 車内LED運行
+function runTrain(train) {
+  const led = document.getElementById("led");
+  let idx = 0;
 
-      const routeStations = stations.slice(start, end + 1);
-
-      const type = types[Math.floor(Math.random() * types.length)];
-      const dest = stations[destIndex];
-
-      // 固定表示
-      document.getElementById("fixedLine").textContent = `${type} ${dest}`;
-
-      // 案内文
-      let info = `この電車は、${origin}始発、${type} ${dest}行きです。停車駅は、${routeStations.join("、")} です。`;
-
-      // ランダムで乗換案内
-      routeStations.forEach(st => {
-        if (transfers[st] && Math.random() < 0.3) {
-          info += ` ${st}では、${transfers[st]} にお乗り換えです。`;
-        }
-      });
-
-      // ランダムで通過待ち
-      if (Math.random() < 0.3) {
-        const waitStation = routeStations[Math.floor(routeStations.length / 2)];
-        const waitType = types[Math.floor(Math.random() * types.length)];
-        info += ` また、${waitStation}では${waitType}の通過待ちを行います。`;
-      }
-
-      // ランダムで人身事故イベント
-      if (Math.random() < 0.1) {
-        info += " なお、この電車は人身事故の影響で遅れて運転しています。";
-      }
-
-      // スクロール表示
-      const scroll = document.getElementById("scrollText");
-      scroll.textContent = info;
-      scroll.style.animation = "none";
-      void scroll.offsetWidth;
-      scroll.style.animation = null;
-
-      // 音声アナウンス
-      playAnnouncement(info);
+  function nextStop() {
+    // 人身事故
+    if (randomAccident()) {
+      led.textContent = "人身事故のため運転を見合わせています";
+      setTimeout(nextStop, 8000);
+      return;
     }
 
-    function playAnnouncement(text) {
-      const url = "https://translate.google.com/translate_tts?ie=UTF-8&tl=ja&client=tw-ob&q="
-        + encodeURIComponent(text);
-      const audio = new Audio(url);
-      audio.play();
-    }
-  </script>
+    if (idx < train.stops.length) {
+      // 停車駅案内
+      led.textContent = "次は " + train.stops[idx] + " です";
 
+      // 乗換案内（例）
+      if (idx === 1) {
+        setTimeout(() => {
+          led.textContent = train.transfer;
+        }, 2000);
+      }
+
+      // 通過待ち
+      if (randomPassing()) {
+        setTimeout(() => {
+          led.textContent = train.stops[idx] + " で通過待ちを行います";
+        }, 3000);
+      }
+
+      // 隣電車待ち
+      if (randomWait()) {
+        setTimeout(() => {
+          led.textContent = "ただいま隣のホームの電車の発車を待っております";
+        }, 4000);
+      }
+
+      idx++;
+      setTimeout(nextStop, 6000); // 次の案内へ
+    } else {
+      led.textContent = "終点 " + train.dest + " に到着しました";
+      currentTrainIndex++;
+      updateBoard();
+      setTimeout(startNextTrain, 5000);
+    }
+  }
+  nextStop();
+}
+
+// 次の電車スタート
+function startNextTrain() {
+  if (currentTrainIndex < trains.length) {
+    runTrain(trains[currentTrainIndex]);
+  } else {
+    document.getElementById("led").textContent = "本日の運行は終了しました";
+  }
+}
+
+// 初期化
+updateBoard();
+startNextTrain();
+</script>
 </body>
 </html>
