--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
     .scroll {
       display: inline-block;
       padding-left: 100%;
-      /* スクロールをゆっくり（60秒で1周） */
-      animation: scrollText 60s linear infinite;
+      animation: scrollText 60s linear infinite; /* ゆっくりスクロール */
     }
     @keyframes scrollText {
       from { transform: translateX(100%); }
@@ -91,9 +90,9 @@ function startTrain() {
   const type = randomPick(trainTypes);
   const dest = randomPick(directions);
 
-  // 停車駅をランダム生成
+  // 停車駅（12駅）
   let stops = [];
-  let numStops = 12; // 12駅 → 約45分相当
+  let numStops = 12;
   for (let i = 0; i < numStops; i++) {
     stops.push(randomPick(stations));
   }
@@ -113,20 +112,20 @@ function startTrain() {
   const detailText = `始発: ${start} ／ 停車駅: ${stops.join("・")} ${eventMsg}`;
   document.getElementById("led").innerHTML = `<span class="scroll">${mainText}　${detailText}</span>`;
 
-  // 運行開始アナウンス
+  // 出発アナウンス
   speak(`${start}始発、${type}${dest}行きです。${eventMsg || "ご乗車ありがとうございます。"}`);
 
-  // 次駅アナウンスを順番に流す（3秒 = 1分相当 → 45分電車くらいのペース）
+  // 5分間隔で次駅アナウンス
   stops.forEach((station, i) => {
     setTimeout(() => {
       speak(`次は、${station}です。`);
-    }, (i + 1) * 3000); // 3秒ごとに次駅
+    }, (i + 1) * 5000); // 5秒 = 5分相当
   });
 
   // 終点アナウンス
   setTimeout(() => {
     speak(`まもなく終点、${dest}です。ご利用ありがとうございました。`);
-  }, (stops.length + 1) * 3000);
+  }, (stops.length + 1) * 5000);
 }
 </script>
 </body>
